--- a/HC.ioc
+++ b/HC.ioc
@@ -15,16 +15,17 @@ Mcu.IPNb=5
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
-Mcu.Pin1=PE5
-Mcu.Pin2=PE6
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PD0
-Mcu.Pin8=PD1
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin1=PE4
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin2=PE5
+Mcu.Pin3=PE6
+Mcu.Pin4=PH0/OSC_IN
+Mcu.Pin5=PH1/OSC_OUT
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PD0
+Mcu.Pin9=PD1
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -53,6 +54,8 @@ PD1.Locked=true
 PD1.Signal=GPIO_Input
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
+PE4.Locked=true
+PE4.Signal=GPIO_Output
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
 PE6.Mode=Full_Duplex_Master
@@ -93,7 +96,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI4_Init-SPI4-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
