--- a/HC.ioc
+++ b/HC.ioc
@@ -11,21 +11,24 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI4
 Mcu.IP3=SYS
 Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE4
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin10=PD0
+Mcu.Pin11=PD1
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PE5
 Mcu.Pin3=PE6
 Mcu.Pin4=PH0/OSC_IN
 Mcu.Pin5=PH1/OSC_OUT
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PD0
-Mcu.Pin9=PD1
-Mcu.PinsNb=11
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -44,6 +47,10 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PD0.Locked=true
@@ -96,7 +103,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI4_Init-SPI4-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI4_Init-SPI4-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -144,6 +151,8 @@ SPI4.Mode=SPI_MODE_MASTER
 SPI4.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
